--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
     *{
-        background-color: aquamarine;
+        background-color: rgb(116, 214, 215);
     }
   .my-img{
         border-radius: 510px;
